--- a/customer_signup.html
+++ b/customer_signup.html
@@ -17,6 +17,11 @@
         [v-cloak] { display: none; }
         /* Critical for showing Google's dropdown above other elements */
         .pac-container { z-index: 1050 !important; }
+
+        /* Hide the duplicate address fields */
+        .hidden-address-fields {
+            display: none;
+        }
     </style>
 </head>
 <body class="bg-gray-100">
@@ -43,21 +48,21 @@
                                     <input ref="autocompleteInput" type="text" placeholder="Start typing your address..." class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500">
                                 </div>
                                 
-                                <div>
-                                    <label class="block text-sm font-medium text-gray-700 mb-1">Street Address</label>
-                                    <input type="text" :value="address.street" readonly placeholder="Street" class="w-full px-4 py-3 border border-gray-300 rounded-lg bg-gray-100 cursor-not-allowed">
-                                </div>
-                                <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
-                                    <input type="text" :value="address.city" readonly placeholder="City" class="w-full px-4 py-3 border border-gray-300 rounded-lg bg-gray-100 cursor-not-allowed">
-                                    <input type="text" :value="address.state" readonly placeholder="State" class="w-full px-4 py-3 border border-gray-300 rounded-lg bg-gray-100 cursor-not-allowed">
-                                    <input type="text" :value="address.zip" readonly placeholder="Zip" class="w-full px-4 py-3 border border-gray-300 rounded-lg bg-gray-100 cursor-not-allowed">
+                                <!-- Hidden duplicate address fields -->
+                                <div class="hidden-address-fields">
+                                    <div>
+                                        <label class="block text-sm font-medium text-gray-700 mb-1">Street Address</label>
+                                        <input type="text" :value="address.street" readonly placeholder="Street" class="w-full px-4 py-3 border border-gray-300 rounded-lg bg-gray-100 cursor-not-allowed">
+                                    </div>
+                                    <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
+                                        <input type="text" :value="address.city" readonly placeholder="City" class="w-full px-4 py-3 border border-gray-300 rounded-lg bg-gray-100 cursor-not-allowed">
+                                        <input type="text" :value="address.state" readonly placeholder="State" class="w-full px-4 py-3 border border-gray-300 rounded-lg bg-gray-100 cursor-not-allowed">
+                                        <input type="text" :value="address.zip" readonly placeholder="Zip" class="w-full px-4 py-3 border border-gray-300 rounded-lg bg-gray-100 cursor-not-allowed">
+                                    </div>
                                 </div>
                             </div>
 
-                            <label class="flex items-center space-x-2 cursor-pointer text-gray-600">
-                                <input type="checkbox" v-model="isAddressConfirmed" class="rounded h-4 w-4 text-blue-600">
-                                <span>I have confirmed the address listed is correct.</span>
-                            </label>
+                            <!-- Removed "I have confirmed the address listed is correct." checkbox -->
 
                             <input type="tel" v-model="form.phone" placeholder="Phone Number" required class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500">
                             <input type="email" v-model="form.email" placeholder="Email Address" required class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500">
@@ -101,6 +106,12 @@
                         <input type="text" v-model="form.zipCode" placeholder="Enter your zip code" required class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500">
                     </div>
 
+                    <!-- Text Message Disclaimer -->
+                    <div class="text-sm text-gray-500 mt-6 p-4 bg-gray-50 rounded-lg border border-gray-200">
+                        <p class="font-semibold mb-2">Text Message Consent:</p>
+                        <p>By providing your phone number, you agree to receive text messages from Michie Auto Detailing regarding your appointments, service updates, and promotions. Message and data rates may apply. Message frequency varies. You can reply STOP at any time to opt-out. Your consent is not a condition of any purchase.</p>
+                    </div>
+
                     <!-- Submission -->
                     <div>
                         <button type="submit" :disabled="isSubmitting" class="w-full bg-green-600 hover:bg-green-700 text-white font-bold py-3 px-4 rounded-lg transition-colors duration-300 disabled:bg-gray-400">
@@ -132,7 +143,9 @@
                     });
                     const address = reactive({ street: '', city: '', state: '', zip: '' });
                     const showSecondVehicle = ref(false);
-                    const isAddressConfirmed = ref(false);
+                    // isAddressConfirmed is no longer needed as a user-facing checkbox,
+                    // but we'll keep it for internal logic to ensure an address is selected.
+                    const isAddressConfirmed = ref(false); 
                     const formMessage = reactive({ text: '', type: '' });
                     const isSubmitting = ref(false);
                     const autocompleteInput = ref(null);
@@ -177,7 +190,7 @@
                         address.state = state;
                         address.zip = zip;
                         form.zipCode = zip;
-                        isAddressConfirmed.value = true;
+                        isAddressConfirmed.value = true; // Automatically confirm once address is filled
                     };
 
                     const handleSubmit = async () => {
@@ -186,8 +199,9 @@
                             formMessage.type = 'error';
                             return;
                         }
-                        if (!isAddressConfirmed.value) {
-                            formMessage.text = 'Please select and confirm your address.';
+                        // Check if an address has been selected/confirmed by the autocomplete
+                        if (!isAddressConfirmed.value || !address.street || !address.city || !address.state || !address.zip) {
+                            formMessage.text = 'Please select a valid service address using the autocomplete.';
                             formMessage.type = 'error';
                             return;
                         }
