--- a/customer_portal.html
+++ b/customer_portal.html
@@ -29,7 +29,6 @@
             <h1 class="text-4xl font-bold text-gray-800">Customer Portal</h1>
         </header>
 
-        <!-- Auth Section -->
         <div id="auth-section" class="bg-white p-8 rounded-xl shadow-md">
              <div id="login-form">
                 <h2 class="text-2xl font-bold text-center mb-6 text-gray-700">Login to Your Account</h2>
@@ -42,26 +41,22 @@
             </div>
         </div>
 
-        <!-- Dashboard Section -->
         <div id="dashboard-section" class="hidden space-y-8">
             <div class="flex justify-between items-center">
                  <h2 class="text-3xl font-bold text-gray-800">Welcome, <span id="customer-name"></span>!</h2>
                  <button id="logout-button" class="bg-red-500 hover:bg-red-600 text-white font-bold py-2 px-4 rounded-lg">Logout</button>
             </div>
 
-            <!-- Confirmed Appointment Section -->
             <div id="upcoming-appointments-section" class="feature-section bg-blue-100 border-l-4 border-blue-500 text-blue-700 p-4 rounded-lg" role="alert">
                 <p class="font-bold">Upcoming Appointments</p>
                 <div id="upcoming-appointments-list" class="space-y-2">
-                    <!-- Upcoming appointment details will be dynamically inserted here -->
-                </div>
+                    </div>
                 <div class="mt-4 text-sm">
-                    <p>If you need to reschedule or cancel your appointment please call our support line. *Fees for appointments canceled or rescheduled may apply</p>
+                    <p>Questions about your appointment, or need to make a change?</p>
                     <a href="tel:4052955189" class="inline-block bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded mt-2">Call (405) 295-5189</a>
                 </div>
             </div>
 
-            <!-- Booking Section -->
             <div class="bg-white p-8 rounded-xl shadow-md">
                 <h3 class="text-2xl font-bold text-gray-700 mb-4">Book a New Detail</h3>
                 <form id="booking-form" class="space-y-6">
@@ -87,8 +82,7 @@
                         <div>
                             <label for="booking-time-buttons" class="block text-sm font-medium text-gray-700 mb-1">Time</label>
                             <div id="booking-time-buttons" class="grid grid-cols-3 gap-2">
-                                <!-- Time buttons will be dynamically inserted here -->
-                            </div>
+                                </div>
                             <input type="hidden" id="selected-booking-time" name="booking-time" required>
                         </div>
                     </div>
@@ -103,12 +97,10 @@
                     <h4 class="text-xl font-bold text-gray-700 mb-2">Book with Financing</h4>
                     <p class="text-gray-600 mb-4">Pay in 3 easy installments: $99 today, and $99 every 14 days for 2 remaining installments.</p>
                     
-                    <!-- Payment Schedule Display -->
                     <div id="payment-schedule" class="bg-gray-100 p-4 rounded-lg mb-4">
                         <h5 class="font-semibold text-gray-700 mb-2">Your Payment Plan:</h5>
                         <div class="space-y-2" id="installments-list">
-                            <!-- Installment details will be dynamically inserted here -->
-                        </div>
+                            </div>
                     </div>
 
                     <form id="financing-booking-form" class="space-y-4">
@@ -120,8 +112,7 @@
                             <div>
                                 <label for="financing-time-buttons" class="block text-sm font-medium text-gray-700 mb-1">Time</label>
                                 <div id="financing-time-buttons" class="grid grid-cols-3 gap-2">
-                                    <!-- Time buttons will be dynamically inserted here -->
-                                </div>
+                                    </div>
                                 <input type="hidden" id="selected-financing-time" name="financing-booking-time" required>
                             </div>
                         </div>
@@ -140,8 +131,7 @@
             </div>
 
             <div id="vehicle-management-section" class="form-section bg-white p-8 rounded-xl shadow-md">
-                <!-- Vehicle management forms will be dynamically inserted here by JS -->
-            </div>
+                </div>
 
             <div id="address-edit-section" class="form-section bg-white p-8 rounded-xl shadow-md">
                  <h3 class="text-xl font-bold text-gray-700 mb-4">Update Address</h3>
