--- a/customer_portal.html
+++ b/customer_portal.html
@@ -50,19 +50,19 @@
         /* Pricing Card styles - copied from homepage for consistency */
         .pricing-grid {
             display: grid;
-            grid-template-columns: 1fr;
-            gap: 2rem;
+            grid-template-columns: 1fr; /* Stack columns on small screens */
+            gap: 2rem; /* Consistent gap between cards */
         }
         @media (min-width: 768px) {
             .pricing-grid {
-                grid-template-columns: repeat(3, 1fr);
+                grid-template-columns: repeat(3, 1fr); /* 3 columns on medium screens and up */
             }
         }
         .pricing-card {
             background-color: #ffffff;
             border: 1px solid #dee2e6;
             border-radius: 0.75rem;
-            padding: 2rem;
+            padding: 1.5rem; /* Adjusted padding for better mobile fit */
             display: flex;
             flex-direction: column;
             box-shadow: 0 8px 24px rgba(0, 0, 0, 0.05);
@@ -73,13 +73,13 @@
             box-shadow: 0 12px 32px rgba(0, 123, 255, 0.15);
         }
         .pricing-level {
-            font-size: 1.5rem;
+            font-size: 1.3rem; /* Slightly smaller for mobile */
             font-weight: 800;
             color: #212529;
             margin-bottom: 0.5rem;
         }
         .pricing-price {
-            font-size: 2.5rem;
+            font-size: 2.2rem; /* Slightly smaller for mobile */
             font-weight: 800;
             color: #28a745;
             margin-bottom: 1.5rem;
@@ -93,7 +93,7 @@
         .feature-list li {
             position: relative;
             padding-left: 1.75rem;
-            margin-bottom: 0.75rem;
+            margin-bottom: 0.8rem; /* Increased margin for better spacing */
             color: #495057;
         }
         .feature-list li::before {
@@ -165,13 +165,15 @@
             <div id="upcoming-appointments-section" class="feature-section bg-blue-100 border-l-4 border-blue-500 text-blue-700 p-4 rounded-lg" role="alert">
                 <p class="font-bold">Upcoming Appointments</p>
                 <div id="upcoming-appointments-list" class="space-y-2">
-                    </div>
+                    <!-- Upcoming appointments will be loaded here -->
+                </div>
                 <div class="mt-4 text-sm">
                     <p>Questions about your appointment, or need to make a change?</p>
                     <a href="tel:4052955189" class="inline-block bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded mt-2">Call (405) 295-5189</a>
                 </div>
             </div>
 
+            <!-- New Booking Flow - Step 1: Vehicle Type Selection -->
             <div id="vehicle-type-selection" class="bg-white p-8 rounded-xl shadow-md hidden">
                 <h3 class="text-2xl font-bold text-gray-700 mb-4 text-center">Select Your Vehicle Type</h3>
                 <div class="vehicle-toggle">
@@ -180,6 +182,7 @@
                 </div>
             </div>
 
+            <!-- New Booking Flow - Step 2: Package Selection -->
             <div id="package-selection-container" class="bg-white p-8 rounded-xl shadow-md hidden">
                 <h3 class="text-2xl font-bold text-gray-700 mb-4 text-center">Select Your Package</h3>
 
@@ -286,6 +289,7 @@
                 </div>
             </div>
 
+            <!-- Original Booking Form - now Step 3 -->
             <div id="booking-form-section" class="bg-white p-8 rounded-xl shadow-md hidden">
                 <h3 class="text-2xl font-bold text-gray-700 mb-4">Book a New Detail</h3>
                 <p class="text-lg font-semibold text-gray-800 mb-4">Selected Package: <span id="selected-package-display" class="text-blue-600"></span></p>
@@ -312,7 +316,8 @@
                         <div>
                             <label for="booking-time-buttons" class="block text-sm font-medium text-gray-700 mb-1">Time</label>
                             <div id="booking-time-buttons" class="grid grid-cols-3 gap-2">
-                                </div>
+                                <!-- Time buttons will be loaded here -->
+                            </div>
                             <input type="hidden" id="selected-booking-time" name="booking-time" required>
                         </div>
                     </div>
@@ -332,7 +337,8 @@
                     <div id="payment-schedule" class="bg-gray-100 p-4 rounded-lg mb-4">
                         <h5 class="font-semibold text-gray-700 mb-2">Your Payment Plan:</h5>
                         <div class="space-y-2" id="installments-list">
-                            </div>
+                            <!-- Installments will be loaded here -->
+                        </div>
                     </div>
 
                     <form id="financing-booking-form" class="space-y-4">
@@ -344,7 +350,8 @@
                             <div>
                                 <label for="financing-time-buttons" class="block text-sm font-medium text-gray-700 mb-1">Time</label>
                                 <div id="financing-time-buttons" class="grid grid-cols-3 gap-2">
-                                    </div>
+                                    <!-- Financing time buttons will be loaded here -->
+                                </div>
                                 <input type="hidden" id="selected-financing-time" name="financing-booking-time" required>
                             </div>
                         </div>
@@ -365,7 +372,8 @@
             </div>
 
             <div id="vehicle-management-section" class="form-section bg-white p-8 rounded-xl shadow-md">
-                </div>
+                <!-- Vehicle management forms will be rendered here by JS -->
+            </div>
 
             <div id="address-edit-section" class="form-section bg-white p-8 rounded-xl shadow-md">
                  <h3 class="text-xl font-bold text-gray-700 mb-4">Update Address</h3>
