--- a/customer_portal.html
+++ b/customer_portal.html
@@ -20,34 +20,14 @@
         .time-button.disabled {
             @apply bg-gray-200 text-gray-400 cursor-not-allowed border-gray-300;
         }
-        /* Vehicle toggle buttons - copied from homepage for consistency */
-        .vehicle-toggle {
-            display: flex;
-            justify-content: center;
-            margin-bottom: 2.5rem;
-            background-color: #e9ecef;
-            border-radius: 0.5rem;
-            padding: 0.5rem;
-            flex-wrap: wrap; /* Allow buttons to wrap on smaller screens */
+        /* Vehicle toggle buttons */
+        .vehicle-type-button {
+            @apply px-6 py-3 rounded-lg border-2 border-gray-300 text-gray-700 font-bold cursor-pointer transition-colors duration-200 shadow-sm;
         }
-        .vehicle-toggle button {
-            background-color: transparent;
-            color: #495057;
-            border: none;
-            padding: 0.75rem 1.5rem;
-            font-size: 1.1rem;
-            font-weight: 700;
-            border-radius: 0.375rem;
-            cursor: pointer;
-            transition: all 0.3s ease;
-            margin: 0.25rem; /* Add some margin for spacing */
+        .vehicle-type-button.active {
+            @apply bg-blue-600 text-white border-blue-600 shadow-md;
         }
-        .vehicle-toggle button.active {
-            background-color: #007bff;
-            color: #ffffff;
-            box-shadow: 0 4px 10px rgba(0, 123, 255, 0.2);
-        }
-        /* Pricing Card styles - copied from homepage for consistency */
+        /* Pricing Card styles */
         .pricing-grid {
             display: grid;
             grid-template-columns: 1fr; /* Stack columns on small screens */
@@ -176,9 +156,10 @@
             <!-- New Booking Flow - Step 1: Vehicle Type Selection -->
             <div id="vehicle-type-selection" class="bg-white p-8 rounded-xl shadow-md hidden">
                 <h3 class="text-2xl font-bold text-gray-700 mb-4 text-center">Select Your Vehicle Type</h3>
-                <div class="vehicle-toggle">
-                    <button id="select-sedan-type">4 Door Sedan</button>
-                    <button id="select-suv-truck-type">SUV / Truck</button>
+                <div class="flex flex-col sm:flex-row justify-center items-center space-y-4 sm:space-y-0 sm:space-x-4">
+                    <button id="select-car-type" class="vehicle-type-button">Car</button>
+                    <button id="select-truck-type" class="vehicle-type-button">Truck</button>
+                    <button id="select-suv-type" class="vehicle-type-button">SUV</button>
                 </div>
             </div>
 
@@ -435,8 +416,9 @@
                 selectedFinancingTimeInput: document.getElementById('selected-financing-time'),
                 // New elements for booking flow
                 vehicleTypeSelection: document.getElementById('vehicle-type-selection'),
-                selectSedanBtn: document.getElementById('select-sedan-type'),
-                selectSuvTruckBtn: document.getElementById('select-suv-truck-type'),
+                selectCarBtn: document.getElementById('select-car-type'), // Changed ID
+                selectTruckBtn: document.getElementById('select-truck-type'), // New ID
+                selectSuvBtn: document.getElementById('select-suv-type'), // Changed ID
                 packageSelectionContainer: document.getElementById('package-selection-container'),
                 sedanPackagesSelection: document.getElementById('sedan-packages-selection'),
                 suvTruckPackagesSelection: document.getElementById('suv-truck-packages-selection'),
@@ -730,9 +712,14 @@
                 elements.bookingFormSection.style.display = 'none';
                 elements.vehicleTypeSelection.style.display = 'block';
                 elements.confirmationMessage.style.display = 'none'; // Hide confirmation if navigating back
+                
+                // Reset active state for vehicle type buttons
+                elements.selectCarBtn.classList.remove('active');
+                elements.selectTruckBtn.classList.remove('active');
+                elements.selectSuvBtn.classList.remove('active');
             }
 
-            function showPackageSelection(vehicleType) {
+            function showPackageSelection(vehicleCategory, clickedButton) {
                 elements.vehicleTypeSelection.style.display = 'none';
                 elements.bookingFormSection.style.display = 'none';
                 elements.packageSelectionContainer.style.display = 'block';
@@ -740,14 +727,17 @@
                 elements.sedanPackagesSelection.style.display = 'none';
                 elements.suvTruckPackagesSelection.style.display = 'none';
 
-                if (vehicleType === 'sedan') {
+                // Remove active class from all vehicle type buttons
+                elements.selectCarBtn.classList.remove('active');
+                elements.selectTruckBtn.classList.remove('active');
+                elements.selectSuvBtn.classList.remove('active');
+                // Add active class to the clicked button
+                clickedButton.classList.add('active');
+
+                if (vehicleCategory === 'sedan') {
                     elements.sedanPackagesSelection.style.display = 'grid';
-                    elements.selectSedanBtn.classList.add('active');
-                    elements.selectSuvTruckBtn.classList.remove('active');
-                } else if (vehicleType === 'suv-truck') {
+                } else if (vehicleCategory === 'suv-truck') {
                     elements.suvTruckPackagesSelection.style.display = 'grid';
-                    elements.selectSuvTruckBtn.classList.add('active');
-                    elements.selectSedanBtn.classList.remove('active');
                 }
                  elements.finalBookAppointmentBtn.style.display = 'none'; // Hide final book button until package is selected
             }
@@ -828,8 +818,10 @@
             });
 
             // New Vehicle Type Selection Event Listeners
-            elements.selectSedanBtn.addEventListener('click', () => showPackageSelection('sedan'));
-            elements.selectSuvTruckBtn.addEventListener('click', () => showPackageSelection('suv-truck'));
+            elements.selectCarBtn.addEventListener('click', (e) => showPackageSelection('sedan', e.target));
+            elements.selectTruckBtn.addEventListener('click', (e) => showPackageSelection('suv-truck', e.target));
+            elements.selectSuvBtn.addEventListener('click', (e) => showPackageSelection('suv-truck', e.target));
+
 
             // New Package Selection Event Listeners (Delegated for dynamically added buttons)
             elements.packageSelectionContainer.addEventListener('click', (e) => {
